# azure-server-up

./: README.md
infrastructure/: pyproject.toml
infrastructure/config/: settings.toml
infrastructure/src/: __init__.py  config.py  infrastructure_setup.py  paths.py  start_task.py
